--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>for loop in objects</h1>
-    <p id="demo"></p>
-</body>
-<script>
-    let person={
-        name:"omkar",
-        sname:"pawar",
-        age:23
-    };
-    let txt=""
-
-    for(let x in person){
-        txt+=person[x] + " "; 
-    }
-
-    document.getElementById("demo").innerHTML=txt;
-
-
-
-</script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body style="margin: 0">
+    <div id="header" style="padding: 1rem; background-color: lightblue">
+      <h1 id="main-heading" style="margin: 0">Fruit Shop</h1>
+      <input id="filter" type="text" placeholder="Search fruits..." />
+    </div>
+    <div>
+      <form>
+        <h2 id="basket-heading">Add Fruits</h2>
+        <input type="text" name="fruit" id="fruit-to-add" />
+        <button type="submit">Add</button>
+      </form>
+      <ul class="fruits">
+        <li class="fruit">Banana<button class="delete-btn">x</button></li>
+        <li class="fruit">Apple<button class="delete-btn">x</button></li>
+        <li class="fruit">Orange<button class="delete-btn">x</button></li>
+        <li class="fruit">Kiwi<button class="delete-btn">x</button></li>
+      </ul>
+    </div>
+    <div id="thanks"></div>
+  </body>
+  <script src="index.js"></script>
 </html>
